# LinearLib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE-APACHE.txt  README.md
.github/workflows/: cd.yml  ci.yml
benchmarks/: MatrixBenchmarks.cpp
include/: Matrix.hpp  Vector.hpp
include/LinearLib/: Matrix.hpp  Tensor.hpp  Vector.hpp
lib/: Matrix.cpp  Vector.cpp
tests/: MatrixTests.cpp  TensorTests.cpp  VectorTests.cpp
